# KVSSD

./: LICENSE  README.md  RELEASE_HISTORY
.github/ISSUE_TEMPLATE/: bug_report.md
PDK/core/: CMakeLists.txt  README  RELEASE_HISTORY  env_init.conf  kvssd_emul.conf
PDK/core/include/: kvs_api.h  kvs_const.h  kvs_result.h  kvs_struct.h  kvs_types.h
PDK/core/sample_code/: test.cpp  test_async.cpp  test_sync.cpp
PDK/core/src/api/include/private/: kvemul.hpp  kvkdd.hpp  kvs_utils.h  private_api.h  private_result.h  private_struct.h  private_types.h  udd.hpp  uddenv.h
PDK/core/src/api/include/udd/: kv_trace.h  kv_types.h  kvnvme.h
PDK/core/src/api/src/: cfrontend.cpp  kvsdevice.cpp  private_cfrontend.cpp  uddenv.cpp
PDK/core/src/api/src/driver_adapter/: kvemuldriver.cpp  kvkdd.cpp  kvudd.cpp
PDK/core/src/device_abstract_layer/: CMakeLists.txt
PDK/core/src/device_abstract_layer/emulator/: CMakeLists.txt  README  kvssd_emul.conf
PDK/core/src/device_abstract_layer/emulator/sample_code/: sample_interrupt.cpp  sample_poll.cpp
PDK/core/src/device_abstract_layer/emulator/src/: io_cmd.cpp  kv_config.cpp  kv_device.cpp  kv_emulator.cpp  kv_namespace.cpp  kvs_adi.cpp  queue.cpp  thread_pool.cpp
PDK/core/src/device_abstract_layer/emulator/test/: test_suite.cpp
PDK/core/src/device_abstract_layer/include/: kvs_adi.h
PDK/core/src/device_abstract_layer/include/private/: history.hpp  io_cmd.hpp  kv_config.hpp  kv_device.hpp  kv_emulator.hpp  kv_namespace.hpp  kvs_adi_internal.h  kvs_utils.h  queue.hpp  thread_pool.hpp
PDK/core/src/device_abstract_layer/kernel_driver_adapter/: CMakeLists.txt  README  kadi.cpp  kadi.h  kadi_debug.cpp  kadi_debug.h  kvs_adi.cpp  linux_nvme_ioctl.h
PDK/core/src/device_abstract_layer/kernel_driver_adapter/include/: kv_linux_kernel.hpp  linux_nvme_ioctl.h
PDK/core/src/device_abstract_layer/kernel_driver_adapter/sample_code/: sample_interrupt.cpp  sample_poll.cpp
PDK/core/src/device_abstract_layer/kernel_driver_adapter/src/: io_cmd.cpp  kv_device.cpp  kv_linux_kernel.cpp  kv_namespace.cpp  kvs_adi.cpp  queue.cpp
PDK/core/src/device_abstract_layer/kernel_driver_adapter/test/: test_suite.cpp
PDK/core/tools/: install_deps.sh  setup.sh
application/KVCeph/src/blkin/blkin-lib/: CMakeLists.txt  Makefile  tp.c  zipkin_c.c  zipkin_c.h  zipkin_trace.h  ztracer.hpp
application/KVCeph/src/blkin/blkin-lib/tests/: CMakeLists.txt  Makefile  test.c  test.cc  test_p.cc
application/KVRocks/kvdb/: CMakeLists.txt  README  kvdb_config.h.in  src.mk
application/KVRocks/kvdb/application_patches/ceph/: ceph_build.txt
application/KVRocks/kvdb/application_patches/kvbench/: kvdb_bench_build.txt
application/KVRocks/kvdb/application_patches/percona-server/: README.txt  kvrocks_build.txt
application/KVRocks/kvdb/application_patches/percona-server/R/: dbbench_plot.r  plot_tpcc_stats.r  plot_tpch_q18.r  plot_tpch_q9.r  test.r  tpcc_plot.R
application/KVRocks/kvdb/application_patches/percona-server/dbbench/: cmd.py  command.py  kvdb_daily.sh  kvproc_schedule.py  mk_rocksdb.sh  rocksdb_bench_daily.py  rocksdb_daily.sh  sar_smart_bench.sh
application/KVRocks/kvdb/application_patches/percona-server/setup/: README.txt  kvmysqld.cnf  mk_kvdb.sh  mysql_init.sql  mysqld.cnf  setup_build.sh  setup_kvrocks.sh  setup_myrocks.sh  setup_myrocks_ali_1device.sh  setup_myrocks_ali_2device.sh
application/KVRocks/kvdb/include/rocksdb/: options.h  write_batch.h
application/kvbench/: CHANGELIST  CMakeLists.txt  INSTALL.md  README  bench_config.ini  cpu.txt
application/kvbench/bench/: couch_bench.cc  couch_bench_orig.cc
application/kvbench/include/aerospike/: aerospike.h  aerospike_batch.h  aerospike_index.h  aerospike_info.h  aerospike_key.h  aerospike_query.h  aerospike_scan.h  aerospike_udf.h  as_address.h  as_admin.h  as_aerospike.h  as_arraylist.h  as_arraylist_iterator.h  as_async.h  as_async_proto.h  as_batch.h  as_bin.h  as_boolean.h  as_buffer.h  as_buffer_pool.h  as_bytes.h  as_cluster.h  as_command.h  as_config.h  as_double.h  as_error.h  as_event.h  as_event_internal.h  as_geojson.h  as_hashmap.h  as_hashmap_iterator.h  as_host.h  as_info.h  as_integer.h  as_iterator.h  as_job.h  as_key.h  as_list.h  as_list_iterator.h  as_list_operations.h  (+50 more)
application/kvbench/include/aerospike/ck/: ck_backoff.h  ck_bitmap.h  ck_brlock.h  ck_bytelock.h  ck_cc.h  ck_cohort.h  ck_elide.h  ck_fifo.h  ck_hp_fifo.h  ck_hp_stack.h  ck_malloc.h  ck_md.h  ck_pflock.h  ck_pr.h  ck_queue.h  ck_ring.h  ck_rwcohort.h  ck_rwlock.h  ck_sequence.h  ck_spinlock.h  ck_stack.h  ck_swlock.h  ck_tflock.h
application/kvbench/include/aerospike/ck/gcc/: ck_cc.h  ck_pr.h
application/kvbench/include/aerospike/ck/spinlock/: anderson.h  cas.h  clh.h  dec.h  fas.h  hclh.h  mcs.h  ticket.h
application/kvbench/include/citrusleaf/: alloc.h  cf_atomic.h  cf_b64.h  cf_byte_order.h  cf_clock.h  cf_clock_win.h  cf_crypto.h  cf_digest.h  cf_hash_math.h  cf_ll.h  cf_queue.h  cf_queue_priority.h  cf_random.h  cf_rchash.h  cf_types.h  cf_vector.h
application/kvbench/include/libcouchstore/: couch_common.h  couch_db.h  couch_index.h  error.h  file_ops.h  visibility.h
application/kvbench/spdk/rocksdb/: Makefile  src.mk
application/kvbench/spdk/rocksdb/include/rocksdb/: env.h
application/kvbench/spdk/rocksdb/tools/: db_bench_tool.cc
application/kvbench/spdk/rocksdb/util/: threadpool_imp.cc
application/kvbench/spdk/spdk/app/nvmf_tgt/: Makefile
application/kvbench/spdk/spdk/app/vhost/: Makefile
application/kvbench/spdk/spdk/dpdk/: .gitignore
application/kvbench/spdk/spdk/examples/: Makefile
application/kvbench/spdk/spdk/mk/: nvmf.unittest.mk
application/kvbench/spdk/spdk/scripts/: setup.sh
application/kvbench/utils/: adv_random.h  iniparser.cc  iniparser.h  keygen.cc  keygen.h  keyloader.cc  keyloader.h  memleak.h  memory.cc  memory.h  stopwatch.cc  stopwatch.h  thpool.cc  workload.h  zipfian_random.cc  zipfian_random.h
application/kvbench/wrappers/: couch_aerospike.cc  couch_blobfs_rocksdb.cc  couch_fdb.cc  couch_kv.cc  couch_kvdb.cc  couch_leveldb.cc  couch_rocksdb.cc  couch_wt.cc
(+2447 files in other folders)
